<resources>
    <string name="app_name">GameOfThrones</string>
    <string name="menu_title_search">Поиск</string>
    <string name="splash_image">Splash image</string>
    <string name="splash_red_overlay">Splash red overlay</string>
    <string name="no_connection_msg">Интернет недоступен - приложение не может быть запущенно.
        Подключитесь к интернету и перезапустите приложение
    </string>
    <string name="mother">Mother:</string>
    <string name="father">Father:</string>
    <string name="aliases">Aliases:</string>
    <string name="titles">Titles:</string>
    <string name="born">Born:</string>
    <string name="words">Words:</string>
    <string name="hose_coat_of_arms">Hose Coat of Arms</string>
</resources>